{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 114,
  "lineage": "44bc57e4-8c44-67cb-2df9-e62511dd25c7",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_openvpn",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "1194"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-05-08T07:35:02.243-07:00",
            "deny": [],
            "description": "Allow access OpenVPN server",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diem-do/global/firewalls/allow-openvpn",
            "log_config": [],
            "name": "allow-openvpn",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "priority": 1000,
            "project": "diem-do",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/global/firewalls/allow-openvpn",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "openvpn"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_public_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2025-05-14T09:08:38.991-07:00",
            "deny": [],
            "description": "Allow public subnet access private subnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diem-do/global/firewalls/allow-public-to-private",
            "log_config": [],
            "name": "allow-public-to-private",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "priority": 1000,
            "project": "diem-do",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/global/firewalls/allow-public-to-private",
            "source_ranges": [
              "10.0.16.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_ssh_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-07T10:21:39.059-07:00",
            "deny": [],
            "description": "Allow SSH into bastion host",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diem-do/global/firewalls/allow-ssh-bastion",
            "log_config": [],
            "name": "allow-ssh-bastion",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "priority": 1000,
            "project": "diem-do",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/global/firewalls/allow-ssh-bastion",
            "source_ranges": [
              "116.108.4.68"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "bastion"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_tailscale_to_console",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "41641"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-05-14T09:23:28.491-07:00",
            "deny": [],
            "description": "Allow tailscale access to console",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diem-do/global/firewalls/allow-tailscale-to-console",
            "log_config": [],
            "name": "allow-tailscale-to-console",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "priority": 1000,
            "project": "diem-do",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/global/firewalls/allow-tailscale-to-console",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_vpn_to_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "all"
              }
            ],
            "creation_timestamp": "2025-05-08T07:35:02.831-07:00",
            "deny": [],
            "description": "Allow VPN clients access private subnet",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diem-do/global/firewalls/allow-vpn-to-private",
            "log_config": [],
            "name": "allow-vpn-to-private",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "priority": 1000,
            "project": "diem-do",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/global/firewalls/allow-vpn-to-private",
            "source_ranges": [
              "10.8.0.0/24"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "gke_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "tcp"
              },
              {
                "ports": [
                  "0-65535"
                ],
                "protocol": "udp"
              }
            ],
            "creation_timestamp": "2025-05-15T08:06:49.124-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/diem-do/global/firewalls/gke-firewall",
            "log_config": [],
            "name": "gke-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "priority": 1000,
            "project": "diem-do",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/global/firewalls/gke-firewall",
            "source_ranges": [
              "10.1.0.0/20",
              "10.1.16.0/20",
              "10.1.32.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "gke-node"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250430",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/diem-do/zones/asia-southeast1-a/disks/diemne-bastion"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "environment": "dev",
              "goog-terraform-provisioned": "true",
              "role": "bastion"
            },
            "enable_display": false,
            "id": "projects/diem-do/zones/asia-southeast1-a/instances/diemne-bastion",
            "instance_id": "8206944260972752381",
            "label_fingerprint": "61BJnPTljfg=",
            "labels": {
              "environment": "dev",
              "role": "bastion"
            },
            "machine_type": "e2-micro",
            "metadata": {
              "ssh-keys": "diemxinh:ssh-ed25519 AAAAC3NzaC1lZDI1NTE5AAAAII9sUIVHbCW03UmvOjUj9J8TT8UyYVXmgieg1xKxOKg1 diemxinh"
            },
            "metadata_fingerprint": "i8QzhqaiK-I=",
            "name": "diemne-bastion",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.142.193.58",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
                "network_ip": "10.0.16.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/diem-do/regions/asia-southeast1/subnetworks/diemne-public-subnet",
                "subnetwork_project": "diem-do"
              }
            ],
            "project": "diem-do",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/zones/asia-southeast1-a/instances/diemne-bastion",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "bastion",
              "openvpn"
            ],
            "tags_fingerprint": "FVoKEWVpGQc=",
            "terraform_labels": {
              "environment": "dev",
              "goog-terraform-provisioned": "true",
              "role": "bastion"
            },
            "zone": "asia-southeast1-a"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.diemne",
            "google_compute_subnetwork.public_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private_vm",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20250508",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/diem-do/zones/asia-southeast1-b/disks/private-vm"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "AMD Rome",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "effective_labels": {
              "goog-terraform-provisioned": "true"
            },
            "enable_display": false,
            "id": "projects/diem-do/zones/asia-southeast1-b/instances/private-vm",
            "instance_id": "8387990017398520203",
            "label_fingerprint": "vezUS-42LLM=",
            "machine_type": "e2-micro",
            "metadata_fingerprint": "IcqFsfkObIo=",
            "name": "private-vm",
            "network_interface": [
              {
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/diem-do/regions/asia-southeast1/subnetworks/diemne-private-subnet",
                "subnetwork_project": "diem-do"
              }
            ],
            "project": "diem-do",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/zones/asia-southeast1-b/instances/private-vm",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "vpn-access"
            ],
            "tags_fingerprint": "C35U9F0xVps=",
            "terraform_labels": {
              "goog-terraform-provisioned": "true"
            },
            "zone": "asia-southeast1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "dependencies": [
            "google_compute_network.diemne",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "diemne",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "description": "my VPC network",
            "enable_ula_internal_ipv6": false,
            "id": "projects/diem-do/global/networks/diemne",
            "mtu": 0,
            "name": "diemne",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "575302827890850869",
            "project": "diem-do",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-14T07:36:57.065-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/diem-do/regions/asia-southeast1/routers/diemne-router",
            "name": "diemne-router",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "project": "diem-do",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/regions/asia-southeast1/routers/diemne-router"
          },
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "diem-do/asia-southeast1/diemne-router/diemne-nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "diemne-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "diem-do",
            "region": "asia-southeast1",
            "router": "diemne-router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "https://www.googleapis.com/compute/v1/projects/diem-do/regions/asia-southeast1/subnetworks/diemne-private-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_network.diemne",
            "google_compute_router.router",
            "google_compute_subnetwork.private_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-07T09:19:14.659-07:00",
            "description": "Private subnet for internal resources",
            "gateway_address": "10.1.0.1",
            "id": "projects/diem-do/regions/asia-southeast1/subnetworks/diemne-private-subnet",
            "ip_cidr_range": "10.1.0.0/20",
            "name": "diemne-private-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "diem-do",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.1.16.0/20",
                "range_name": "diemne-secondary-range"
              },
              {
                "ip_cidr_range": "10.3.0.0/16",
                "range_name": "service-subnet"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/regions/asia-southeast1/subnetworks/diemne-private-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2025-05-07T09:16:26.425-07:00",
            "description": "Public subnet for resource to access the internet",
            "gateway_address": "10.0.16.1",
            "id": "projects/diem-do/regions/asia-southeast1/subnetworks/diemne-public-subnet",
            "ip_cidr_range": "10.0.16.0/24",
            "name": "diemne-public-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/diem-do/global/networks/diemne",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "diem-do",
            "purpose": "PRIVATE",
            "region": "asia-southeast1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/diem-do/regions/asia-southeast1/subnetworks/diemne-public-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.diemne"
          ]
        }
      ]
    }
  ]
}